[build-system]
requires = ["setuptools", "aiohttp"]
build-backend = "setuptools.build_meta"

[project]
name = "caching_proxy"
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/nichney/caching-proxy-python"

[project.scripts]
caching-proxy = "caching_proxy.proxy:main"

[tool.setuptools.packages.find]
where = ["src"]
